--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "${PROJECT_NAME}",
+  "name": "MediaQueries_Practice",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
